2004-06-15  Fred Kiefer <FredKiefer@gmx.de>

        * Source/NSComboBoxCell.m: (-copyWithZone:) Added missing method.

2004-06-11  Adam Fedor  <fedor@gnu.org>

	* Version 0.9.3
	* Documentation/ReleaseNotes.gsdoc: New file
	* Documentation/GNUmakefile: generate ReleaseNotes. Update
	GuiUser make
	* Documentation/GuiUser/GNUmakefile: New file.
	* Source/DocMakefile: Remove GuiUser generation.

2004-06-09  Quentin Mathe <qmathe@club-internet.fr>

        * Source/NSComboBoxCell.m: Improved look, added constrained height and
	minor documentation change.
	* Source/NSComboBox.m: Added constrained height and minor documentation
	change.

2004-06-08  Fred Kiefer <FredKiefer@gmx.de>

        * Source/NSCell.m: (-drawWithFrame:inView:)
        * Source/NSFormCell.m: (-drawWithFrame:inView:)
        * Source/NSTableHeaderCell.m: (-drawWithFrame:inView:)
        * Source/NSTableView.m: (-drawRect:)
        * Source/NSColorWell.m: (-drawRect:)
        * Source/NSProgressIndicator.m: (+initialize, -drawRect:)
        * Source/NSScrollView.m: (-drawRect:)
        * Source/NSTabView.m: (-drawRect:)
        * Source/GSTitleView.m: (-drawRect:)
        * Source/NSBrowser.m: (-drawRect:, [GSBrowserTitleCell drawWithFrame:inView:])
	Use GSDrawingFunction methods instead of NS functions. Also
	changed colour of progress indicatore. Patch by Nicolas Roard
	<nicolas@roard.com>. 
	
2004-06-07  Quentin Mathe <qmathe@club-internet.fr>
        
	* Source/NSComboBoxCell.m: Added complete documentation.
	* Source/NSComboBox.m: Minor documentation corrections.

2004-06-06  Quentin Mathe <qmathe@club-internet.fr>
        
	* Source/NSComboBox.m: Added complete documentation.

2004-06-04  Fred Kiefer <FredKiefer@gmx.de>

	* Headers/Additions/GNUstepGUI/GSDragView.h:
	* Source/GSDragView.m: New files with a backend neutral drag and
	drop implementation.
	* Source/GNUmakefile: Added GSDragView.m. 
	* Source/NSPrintOperation.m: Use correct subclass for PDF operations.
